Fixed issue with horizontal scroll bar

--- a/public/main.scss
+++ b/public/main.scss
@@ -49,6 +49,7 @@
 body, html {
     margin: 0px;
     padding: 0px;
+    max-width: 100%;
 }
 
 div {
@@ -62,4 +63,5 @@ p {
 * {
     color: #3A3A3A;
 }
+
 
