--- a/src/modules/projects/style/projects.scss
+++ b/src/modules/projects/style/projects.scss
@@ -1,5 +1,6 @@
 .project {
     padding: 60px 120px;
+    overflow: hidden;
     .contents {
         display: flex;
         align-items: flex-start;
